# flare

./: CLAUDE.md  DEVELOPMENT.md  README.md  SkyDeploy_PRD.docx  docker-compose.yml  pyproject.toml
examples/: models.yaml
flare/: __init__.py
flare/cli/: main.py
flare/cli/commands/: apply_cmd.py  batch_cmd.py  catalog_cmd.py  cost_cmd.py  deploy_cmd.py  init_cmd.py  logs_cmd.py  model_cmd.py  rm_cmd.py  stop_cmd.py
flare/core/: config.py  constants.py  exceptions.py  state.py
flare/gateway/: app.py  config.py  poller.py
flare/gateway/queue/: __init__.py  base.py  redis_queue.py  sqlite_queue.py
flare/gateway/routes/: __init__.py  chat.py  models_route.py  requests_route.py
flare/providers/: base.py  skypilot.py
flare/registry/: loader.py
flare/sdk/: __init__.py  client.py  decorators.py
registry/deepseek/: deepseek-r1-distill-32b.yaml  deepseek-r1-distill-8b.yaml
registry/gemma/: gemma-3-27b.yaml  gemma-3-2b.yaml  gemma-3-4b.yaml  gemma-3-9b.yaml
registry/gguf/: deepseek-r1-7b-q4km.yaml  gemma-3-4b-q4km.yaml  llama-3-8b-q4km.yaml  llama-3.1-8b-q4km.yaml  mistral-7b-q4km.yaml  qwen3-8b-q4km.yaml
registry/glm/: glm-4-9b.yaml  glm-z1-32b.yaml
registry/gpt-oss/: gpt-oss-20b.yaml
registry/kimi/: kimi-k2.yaml
registry/llama/: llama-3.1-70b.yaml  llama-3.1-8b.yaml  llama-3.2-3b.yaml  llama-3.3-70b.yaml  llama-4-maverick-17b.yaml  llama-4-scout-17b.yaml
registry/mistral/: mistral-7b-v03.yaml  mixtral-8x7b.yaml
registry/phi/: phi-3-medium-4k.yaml  phi-3-mini-4k.yaml
registry/qwen/: qwen3-14b.yaml  qwen3-32b.yaml  qwen3-72b.yaml  qwen3-8b.yaml
registry/qwen-vl/: qwen2.5-vl-72b.yaml  qwen2.5-vl-7b.yaml
